Added patient detail views

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,12 @@
    </div>
  
    <div id="main" class="col-lg-10 col-md-9 col-sm-9 fill">
-      <h1>{{title}}</h1>
-      <app-patients></app-patients>
+      <div class="row">
+        <div class="col-12" style="height: 50px"></div>
+      </div>
+      <div class="row">
+          <app-patients></app-patients>
+      </div>
    </div> 
   </div>
  </div>
