--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,28 @@
 <div class="container-fluid">
   <div class="row">
-   <div id="navigation" class="text-center">
-     <h3 style="color: whitesmoke">EHR Demo</h3>
-     <ul style="list-style: none; padding-left: 0;">
-       <li><a class="nav-link" href="#">Home</a></li>
-       <li><a class="nav-link" href="#">Charts</a></li>
-       <li><a class="nav-link" href="#">Patient List</a></li>
-     </ul>
-   </div>
- 
-   <div class="col-lg-2 col-md-3 col-sm-3 hidden-xs">
-     <!-- Placeholder - keep empty -->
-   </div>
- 
-   <div id="main" class="col-lg-10 col-md-9 col-sm-9 fill">
+    <div id="navigation" class="text-center">
+      <h3 style="color: whitesmoke">EHR Demo</h3>
+      <ul style="list-style: none; padding-left: 0;">
+        <li><a routerLink="/dashboard" class="nav-link" href="#">Home</a></li>
+        <li><a routerLink="/dashboard" class="nav-link" href="#">Dashboard</a></li>
+        <li><a routerLink="/patients" class="nav-link" href="#">Patient List</a></li>
+      </ul>
+    </div>
+
+    <div class="col-lg-2 col-md-3 col-sm-3 hidden-xs">
+      <!-- Placeholder - keep empty -->
+    </div>
+
+    <div id="main" class="col-lg-10 col-md-9 col-sm-9 fill">
       <div class="row">
         <div class="col-12" style="height: 50px"></div>
       </div>
       <div class="row">
-          <app-patients></app-patients>
+        <router-outlet></router-outlet>
       </div>
-   </div> 
+      <div class="row">
+        <app-messages></app-messages>
+      </div>
+    </div>
   </div>
  </div>
