--- a/src/app/patients/patients.component.html
+++ b/src/app/patients/patients.component.html
@@ -1,9 +1,10 @@
 <h2>Patient List</h2>
 
 <ul class="patients">
-  <li *ngFor="let patient of patients" [class.selected]="patient === selectedPatient" (click)="onSelect(patient)">
-    <span class="badge">{{patient.id}}</span> {{patient.firstName}} {{patient.lastName}}
+  <li *ngFor="let patient of patients">
+    <a routerLink="/detail/{{patient.id}}">
+      <span class="badge">{{patient.id}}</span>
+      {{patient.firstName}} {{patient.lastName}}
+    </a>
   </li>
 </ul>
-
-<app-patient-detail [patient]="selectedPatient"></app-patient-detail>
