Added ability to add new patients to the mock patient database.

--- a/src/app/patient-detail/patient-detail.component.html
+++ b/src/app/patient-detail/patient-detail.component.html
@@ -2,8 +2,11 @@
 
   <h2>{{patient.firstName}} {{patient.lastName}} Details</h2>
   <div><span>id: </span>{{patient.id}}</div>
-  <!-- <div><span>sex: </span>{{patient.sex}}</div>
-  <div><span>dob: </span>{{patient.dob}}</div> -->
+  <div><span>sex: </span>{{patient.sex}}</div>
+  <div><span>dob: </span>{{patient.dob}}</div>
+  <div><span>address: </span>{{patient.address}}</div>
+  <div><span>phone: </span>{{patient.phone}}</div>
+  <div><span>last accessed: </span>{{patient.accessed}}</div>
 
   <div>
     <label>Diagnoses:
