--- a/src/app/patients/patients.component.html
+++ b/src/app/patients/patients.component.html
@@ -1,5 +1,33 @@
 <h2>Patient List</h2>
 
+<div style="margin-left: 8%">
+  <h3>Add Patient</h3>  <!--TODO: turn this into a button that opens a larger add patient div-->
+  <div class="row">
+    <label>First name:
+      <input #patientFirstName />
+    </label>
+    <label>Last name:
+      <input #patientLastName />
+    </label>
+  </div>
+  <label>dob:
+    <input #patientDob />
+  </label>
+  <label>sex:
+    <input #patientSex />
+  </label>
+  <label>address:
+    <input #patientAddress />
+  </label>
+  <label>phone:
+    <input #patientPhone />
+  </label>
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button (click)="add(patientFirstName.value, patientLastName.value, patientDob.value, patientSex.value, patientAddress.value, patientPhone.value); patientFirstName.value=''; patientLastName.value=''; patientDob.value=''; patientSex.value=''; patientAddress.value=''; patientPhone.value=''">
+    add
+  </button>
+</div>
+
 <ul class="patients">
   <li *ngFor="let patient of patients">
     <a routerLink="/detail/{{patient.id}}">
