--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <div class="grid grid-pad">
   <a *ngFor="let patient of patients" class="col-1-4" routerLink="/detail/{{patient.id}}">
     <div class="module patient">
-      <h4>{{patient.name}}</h4>
+      <h4>{{patient.firstName}}</h4>
     </div>
   </a>
 </div>
