--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <h3>Recent Patients</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let patient of patients" class="col-1-4" routerLink="/patients/{{patient.id}}">
+  <a *ngFor="let patient of patients$ | async" class="col-1-4" routerLink="/patients/{{patient.patient_id}}">
     <div class="module patient">
-      <h4>{{patient.firstName}}</h4>
+      <h4>{{patient.first_name}}</h4>
     </div>
   </a>
 </div>
