--- a/src/app/patient-detail/patient-detail.component.html
+++ b/src/app/patient-detail/patient-detail.component.html
@@ -1,13 +1,13 @@
 <div *ngIf="patient">
-  <h2>{{patient.firstName}} {{patient.lastName}} Details</h2>
-  <div><span>id: </span>{{patient.id}}</div>
+  <h2>{{patient.first_name}} {{patient.last_name}} Details</h2>
+  <div><span>id: </span>{{patient.patient_id}}</div>
   <div><span>sex: </span>{{patient.sex}}</div>
   <div><span>dob: </span>{{patient.dob}}</div>
   <div><span>address: </span>{{patient.address}}</div>
   <div><span>phone: </span>{{patient.phone}}</div>
-  <div><span>last accessed: </span>{{patient.lastAccessedDate}}</div>
-  <div><span>last updated: </span>{{patient.lastUpdatedDate}}</div>
-  <div><span>created: </span>{{patient.createDate}}</div>
+  <div><span>last accessed: </span>{{patient.last_accessed_date}}</div>
+  <div><span>last updated: </span>{{patient.last_updated_date}}</div>
+  <div><span>created: </span>{{patient.create_date}}</div>
 
   <div>
     <label>Diagnoses:
