Loading patients list successfully. Working on patient details page.

--- a/src/app/patient-detail/patient-detail.component.html
+++ b/src/app/patient-detail/patient-detail.component.html
@@ -9,11 +9,11 @@
   <div><span>last updated: </span>{{patient.last_updated_date}}</div>
   <div><span>created: </span>{{patient.create_date}}</div>
 
-  <div>
+  <!--<div>
     <label>Diagnoses:
       <input [(ngModel)]="patient.diagnoses" placeholder="none"/>
     </label>
-  </div>
+  </div>-->
 
   <button (click)="goBack()">go back</button>
   <button (click)="save()">save</button>
