Patient detail, patient add, patient delete. Working on the patient obj constructor.

--- a/src/app/patients/patients.component.html
+++ b/src/app/patients/patients.component.html
@@ -35,6 +35,6 @@
       <span class="badge">{{patient.patient_id}}</span> {{patient.first_name}} {{patient.last_name}}
     </a>
     <button class="delete" title="delete patient"
-            (click)="deletePatient(paitent)">x</button>
+            (click)="deletePatient(patient)">x</button>
   </li>
 </ul>
